[project]
name = "duo-hotp"
version = "0.1.0.20250829"
description = "Duo HMAC One Time Password command line interface"
readme = "readme.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["./"]
#include = ["duo_hotp"]

[project.scripts]
duo-hotp = "duo:cli_hotp"
